unpackaged/main/default/objects/Contract/Contract.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>