unpackaged/main/default/objects/Contract/fields/Contract_ACV__c.field-meta.xml
<CustomField>
    <fullName>Contract_ACV__c</fullName>
    <label>Contract ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>