unpackaged/main/default/objects/Contract/fields/Contract_ACV_Services__c.field-meta.xml
<CustomField>
    <fullName>Contract_ACV_Services__c</fullName>
    <formula>SBQQ__Opportunity__r.ACVPrimaryQuote__c +  SBQQ__Opportunity__r.Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract ACV + Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>