unpackaged/main/default/objects/Contract/fields/Contract_frequency__c.field-meta.xml
<CustomField>
    <fullName>Contract_frequency__c</fullName>
    <label>Contract frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Month to Month</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>