unpackaged/main/default/objects/Contract/fields/Intacct_Fair_Value_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Fair_Value_Price_List__c</fullName>
    <label>Intacct Fair Value Price List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MEA Price List 20210216</fullName>
                <default>true</default>
                <label>MEA Price List 20210216</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>