unpackaged/main/default/objects/Contract/fields/Net_Price_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Rollup__c</fullName>
    <label>Net Price (Rollup)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>