unpackaged/main/default/objects/Contract/fields/Renewal_Contract_Amount_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Contract_Amount_Annualized__c</fullName>
    <label>Renewal Contract Amount (Annualized)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>