unpackaged/main/default/objects/Contract/fields/RevenueRecognitionNotes__c.field-meta.xml
<CustomField>
    <fullName>RevenueRecognitionNotes__c</fullName>
    <description>This is the rev rec notes that finance will enter with their approvals</description>
    <inlineHelpText>This is the rev rec notes that finance will enter with their approvals</inlineHelpText>
    <label>Revenue Recognition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>