unpackaged/main/default/objects/Contract/fields/SpecialTerms__c.field-meta.xml
<CustomField>
    <fullName>SpecialTerms__c</fullName>
    <label>Special Terms</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>