unpackaged/main/default/objects/Contract/listViews/AllDraftContracts.listView-meta.xml
<ListView>
    <fullName>AllDraftContracts</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>All Draft Contracts</label>
</ListView>